Done add codithion to check and validation

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon src/index.ts",
+    "watch": "nodemon src/bank.ts",
     "build": "tsc",
-    "start": "node build/index.js",
+    "start": "node public/bank.js",
     "type": "module"
   },
   "devDependencies": {
